set default dark mode and nav fix

--- a/src/components/Navigation/nav.scss
+++ b/src/components/Navigation/nav.scss
@@ -83,7 +83,7 @@
         backdrop-filter: blur(10px);
         min-height: 100vh;
         transform: translateX(-100%);
-        transition: transform 500ms ease-in-out;
+        transition: transform 150ms ease-in-out;
         border-radius: 0;
         margin: 0;
         --gap: 2em;
